releng: Setup maven build and exe creation